    but the loop over the list works on the cached keys -> the function/arg for
    the second key is already removed.
  - feature: X10 support for pgm3

- Boris Sat Nov 15 CET 2008
  - bugfix: correct correction factors for EMEM in 15_CUL_EM.pm

- Wed Dec  3 18:36:56 MET 2008 (Rudi)
  - reorder commandref.html, so that all aspects of a device
    (define/set/get/attributes) are in one block. This makes possible to
    "outsource" device documentation
  - added "mobile" flag to the CUL definition, intended for a CUR, which is
    a remote with a battery, so it is not connected all the time to fhem.
    Without the flag fhem will block when the CUR is disconnected.
    Note: we have to sleep after disconnect for 5 seconds, else the Linux
    kernel sends us a SIGSEGV, and the USB device is gone till the next reboot.
  - the fhem CUL part documented

- Sun Dec  7 21:09 (Boris)
  - reworked 15_CUL_EM.pm to account for timer wraparounds, more readings added
  - speed gain through disabled refreshvalues query to all FHTs at definition;
    if you want it back at a "set myFHT report1 255 report2 255" command to the
    config file.

- Mon Dec  8 21:26 MET 2008 (Rudi)
  - Modules can now modify the cmds hash, i.e. modules can add / overwrite /
    delete internal fhem commands. See 99_XmlList.pm for an example. Since this
    modules is called 99_xxx, it will be always loaded, but user of webpgm2 do
    not need it.

- Wed Dec 17 19:48 (Boris)
  - attribute rainadjustment for KS300 in 13_KS300.pm to account for random
    switches in the rain counter (see commandref.html)

- Fri Jan  2 10:29 2009 (Rudi)
  - 00_CUL responds to CUR request. These are sent as long FS20 messages, with
    a housecode stored in CUR_id_list attribute of the CUL device. If the ID
    matches, the message is analyzed, and an FS20 message to the same address
    is sent back. The CUR must have reception enabled.
    Right now status/set time/set FHT desired temp are implemented.
